tests/NormalTests/paczka1/small_fuzzy/69401201.err
Error in line 3: Vw4A00OkY A349 57,66
Error in line 4: Vw4A00OkY A349 -1,4
Error in line 1: lD97r A335 51,3
Error in line 2: A335 A335 99,1
Error in line 13: vai0a A349 39,5
